--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-
+GameDefaultMap=/Game/_Game/Maps/DefaultMap.DefaultMap
+EditorStartupMap=/Game/_Game/Maps/DefaultMap.DefaultMap
+GlobalDefaultGameMode=/Game/_Game/GameModes/BP_PAGameModeBase.BP_PAGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
